java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/BrokenFileNoHighlightingWithPackage.java
<error descr="Package statement is not allowed for implicitly declared class">package a;</error>

int ab;

class AB {

}